<resources>
    <string name="app_name">Busca Preço</string>
    
    <!-- TEXTVIEW-->
    <string name="txtCodBarras">Código de Barras</string>
    <string name="txtCodProduto">Código do Produto</string>
    <string name="txtDescProduto"> Passe um produto !</string>
    <string name="txtSifrao">R$: </string>
    <string name="txtValor"></string>
    <string name="btnVer">Ver</string>

    <!-- EDITTEXT-->
    <string name="edtLeitorBarras">Código de Barras</string>



</resources>
