<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.farid.denoapp.TelaInicial">

    <ImageView
        android:id="@+id/LogoFarid"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@mipmap/logo"
        android:layout_alignBottom="@+id/txtCodProduto"
        android:layout_toLeftOf="@+id/txtSifrao"
        android:layout_marginRight="91dp"
        android:layout_marginEnd="91dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/edtCodBarras"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtLeitorBarras"
        android:inputType="textPersonName"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/txtSifrao"
        android:layout_alignStart="@+id/txtSifrao" />

    <TextView
        android:id="@+id/txtCodProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtCodProduto"
        android:inputType="textPersonName"
        android:layout_below="@+id/edtCodBarras"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtDescProduto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textColor="#8B0000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtDescProduto"
        android:inputType="textPersonName"
        android:textColorLink="@android:color/holo_red_dark"
        android:textSize="60sp"
        tools:textSize="60sp" />

    <TextView
        android:id="@+id/txtSifrao"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtSifrao"
        android:inputType="textPersonName"
        android:textSize="100sp"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_above="@+id/btnVer"
        android:layout_toLeftOf="@+id/txtValor"
        android:layout_toStartOf="@+id/txtValor" />

    <TextView
        android:id="@+id/txtValor"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:textColor="#8B0000"
        android:ems="2"
        android:gravity="center"
        android:hint="@string/txtValor"
        android:inputType="textPersonName"
        android:textColorLink="@android:color/holo_red_dark"
        android:textSize="100sp"
        tools:textSize="100sp"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_above="@+id/btnVer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/btnVer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@mipmap/lupa"
        android:layout_alignBottom="@+id/txtCodProduto"
        android:layout_toRightOf="@+id/edtCodBarras"
        android:layout_toEndOf="@+id/edtCodBarras" />



</RelativeLayout>
